--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>Maestro</title>
 
+    <!-- Icono --> 
+    <link rel="shorcut icon" href="Recursos/favicon_generator/favicon.ico">
+
     <!-- amigable a celulares y tablets -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
