--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
 
     <!-- Librerías de plugins -->
 
+    <div class="css3class">
+
+    </div>
 
     <!-- Archivo personalizado de Javascript -->
     <script src="Recursos/master/lib/curso.js"></script>
