--- a/Seccion 04/CSS3 generator.html
+++ b/Seccion 04/CSS3 generator.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -27,6 +28,9 @@
       </div>
 
       <!-- Editar desde aquí  -->
+      <div class="css3class">
+
+      </div>
 
       <!-- Hasta aquí modificaremos -->
     
