--- a/Sección 05/Metro notification.html
+++ b/Sección 05/Metro notification.html
@@ -13,9 +13,9 @@
     <!-- Estilos de la master -->
     <link rel="stylesheet" href="Recursos/master/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="Recursos/master/lib/estilo.css">
-    
+
     <!-- Estilos de los recursos adicionales -->
-    <!-- <link rel="stylesheet" href="Recursos/master/Yose_Modal/css/yosemodal.min.css"> -->
+    <link rel="stylesheet" href="Recursos/master/Metro/css/MetroNotificationStyle.css">
 
   </head>
   <body>
@@ -34,11 +34,11 @@
     </div>
 
     <!-- Librerías adicionales -->
-    <script src="Recursos/master/lib/jquery.min.js"></script>
+    <script src="Recursos/master/Metro/js/jquery-1.11.1.min.js"></script>
     <script src="Recursos/master/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Librerías de plugins -->
-    <!-- <script src="Recursos/master/Yose_Modal/js/yosemodal.js"></script> -->
+    <script src="Recursos/master/Metro/js/MetroNotification.js"></script>
 
     <!-- Archivo personalizado de Javascript -->
     <script src="Recursos/master/lib/curso.js"></script>
