--- a/Sección 05/Yose Modal.html
+++ b/Sección 05/Yose Modal.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="Recursos/master/lib/estilo.css">
     
     <!-- Estilos de los recursos adicionales -->
-    <!-- <link rel="stylesheet" href="Recursos/master/Yose_Modal/css/yosemodal.min.css"> -->
+    <link rel="stylesheet" href="Recursos/master/Yose_Modal/css/yosemodal.min.css">
 
   </head>
   <body>
@@ -38,7 +38,7 @@
     <script src="Recursos/master/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Librerías de plugins -->
-    <!-- <script src="Recursos/master/Yose_Modal/js/yosemodal.js"></script> -->
+    <script src="Recursos/master/Yose_Modal/js/yosemodal.js"></script>
 
     <!-- Archivo personalizado de Javascript -->
     <script src="Recursos/master/lib/curso.js"></script>
