--- a/Seccion 04/CSS Gradient ColorZilla.html
+++ b/Seccion 04/CSS Gradient ColorZilla.html
@@ -1,1 +1,46 @@
-<!-- https://www.colorzilla.com/gradient-editor/ -->
+<!-- https://www.colorzilla.com/gradient-editor/ --><!DOCTYPE html>
+<html>
+    <head>
+      <meta charset="utf-8">
+      <title>Maestro</title>
+  
+      <!-- Icono --> 
+      <link rel="shorcut icon" href="Recursos/favicon_generator/favicon.ico">
+  
+      <!-- amigable a celulares y tablets -->
+      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  
+      <!-- Estilos de la master -->
+      <link rel="stylesheet" href="Recursos/master/bootstrap/css/bootstrap.min.css">
+      <link rel="stylesheet" href="Recursos/master/lib/estilo.css">
+  
+      <!-- Estilos de los recursos adicionales -->
+  
+    </head>
+    <body>
+  
+      <div class="container">
+  
+        <div class="page-header">
+          <h1>Master</h1>
+          <p class="lead">Pequeña introducción al curso</p>
+        </div>
+  
+        <!-- Editar desde aquí  -->
+        <div class="gradient css3"></div>
+  
+        <!-- Hasta aquí modificaremos -->
+      
+      </div>
+  
+      <!-- Librerías adicionales -->
+      <script src="Recursos/master/lib/jquery.min.js"></script>
+      <script src="Recursos/master/bootstrap/js/bootstrap.min.js"></script>
+  
+      <!-- Librerías de plugins -->
+      <!-- Archivo personalizado de Javascript -->
+      <script src="Recursos/master/lib/curso.js"></script>
+      
+    </body>
+  </html>
+  
