Terminando la sección 6 de animaciones

--- a/Sección 06/greenSock.html
+++ b/Sección 06/greenSock.html
@@ -29,6 +29,20 @@
 
       <!-- Editar desde aquí  -->
 
+      <div id="divCajaRoja">
+
+
+
+      </div>
+
+
+      <div id="divCajaAzul">
+
+        
+
+      </div>
+
+
       <!-- Hasta aquí modificaremos -->
     
     </div>
@@ -38,8 +52,8 @@
     <script src="Recursos/master/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Librerías de plugins -->
-    <!-- <script src="Recursos/master/GreenSock/TimelineMax.min.js"></script>
-    <script src="Recursos/master/GreenSock/TweenMax.min.js"></script> -->
+    <script src="Recursos/master/GreenSock/TimelineMax.min.js"></script>
+    <script src="Recursos/master/GreenSock/TweenMax.min.js"></script>
 
     <!-- Archivo personalizado de Javascript -->
     <script src="Recursos/master/lib/curso.js"></script>
