DatePicker and sweetAlert

--- a/Sección 09/Picker.html
+++ b/Sección 09/Picker.html
@@ -16,9 +16,9 @@
     <link rel="stylesheet" href="Recursos/master/lib/estilo.css">
     
     <!-- Estilos de los recursos adicionales -->
-    <!-- <link rel="stylesheet" href="Recursos/master/picker/themes/classic.css">
+    <link rel="stylesheet" href="Recursos/master/picker/themes/classic.css">
     <link rel="stylesheet" href="Recursos/master/picker/themes/classic.date.css">
-    <link rel="stylesheet" href="Recursos/master/picker/themes/classic.time.css"> -->
+    <link rel="stylesheet" href="Recursos/master/picker/themes/classic.time.css">
 
   </head>
   <body>
@@ -48,11 +48,11 @@
     <script src="Recursos/master/lib/jquery.min.js"></script>
     <script src="Recursos/master/bootstrap/js/bootstrap.min.js"></script>
 
-    <!-- Librerías de plugins
+    <!-- Librerías de plugins -->
     <script src="Recursos/master/picker/picker.js"></script>
     <script src="Recursos/master/picker/picker.date.js"></script>
     <script src="Recursos/master/picker/picker.time.js"></script>
-    <script src="Recursos/master/picker/translations/es_ES.js"></script> -->
+    <script src="Recursos/master/picker/translations/es_ES.js"></script>
     
 
     <!-- Archivo personalizado de Javascript -->
