Fin de sección 09

--- a/Sección 09/complexify.html
+++ b/Sección 09/complexify.html
@@ -30,6 +30,14 @@
 
       <!-- Editar desde aquí  -->
       
+      <input type="text" class="form-control" id="txtPass"/>
+
+      <br/>
+
+      <div class="progress">
+        <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
+
       <!-- Hasta aquí modificaremos -->
     
     </div>
@@ -39,8 +47,8 @@
     <script src="Recursos/master/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Librerías de plugins-->
-    <!-- <script src="Recursos/master/plugins/complexify/jquery.complexify.banlist.js"></script>
-    <script src="Recursos/master/plugins/complexify/jquery.complexify.min.js"></script> -->
+    <script src="Recursos/master/plugins/complexify/jquery.complexify.banlist.js"></script>
+    <script src="Recursos/master/plugins/complexify/jquery.complexify.min.js"></script>
 
     <!-- Archivo personalizado de Javascript -->
     <script src="Recursos/master/lib/curso.js"></script>
