fin de sección 12

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
       </div>
 
       <!-- Editar desde aquí  -->
+      <img id="foto" src="Recursos/master/color-thief/images.jpg" />
+
+      <br/>
+      <br/>
+
+      <div id="caja"></div>
       
       <!-- Hasta aquí modificaremos -->
     
@@ -39,8 +45,7 @@
     <script src="Recursos/master/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Librerías de plugins-->
-    <!-- <script src="Recursos/master/plugins/complexify/jquery.complexify.banlist.js"></script>
-    <script src="Recursos/master/plugins/complexify/jquery.complexify.min.js"></script> -->
+    <script src="Recursos/master/color-thief/color-thief.min.js"></script>
 
     <!-- Archivo personalizado de Javascript -->
     <script src="Recursos/master/lib/curso.js"></script>
