--- a/Recursos/master/LigthBox/index.html
+++ b/Recursos/master/LigthBox/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="css/estilo.css">
 
     <!-- <link rel="stylesheet" href="css/swipebox.min.css" > -->
-
-    <link rel="stylesheet" href="img/jquery.fancybox-1.3.4.css" > 
+    <!-- <link rel="stylesheet" href="img/jquery.fancybox-1.3.4.css" >  -->
+    <link rel="stylesheet" href="plugins/css/lightbox.css">
 
   </head>
   <body>
@@ -19,10 +19,8 @@
     <div class="">
       <h1>Proyecto Fancy box</h1>
       <hr>
-
-      <a class="fancyBox" rel="group" href="img/aquaman.png">
-        <img src="img/aquaman.png" alt="">
-      </a>
+      
+      <a href="img/aquaman.png" data-lightbox="image-1" data-title="My caption">Image #1</a>
 
     </div>
 
@@ -34,8 +32,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 
     <!-- <script src="libs/jquery.swipebox.min.js" ></script> -->
-    <link rel="stylesheet" href="img/jquery.fancybox-1.3.4.js" > 
-    
+    <!-- <link rel="stylesheet" href="img/jquery.fancybox-1.3.4.js" >  -->
+    <script src="plugins/js/lightbox.js" ></script>
+
     <script src="app.js" charset="utf-8"></script>
   </body>
 </html>
